{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 1,
  "lineage": "00000000-0000-4000-8000-000000000000",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "43a40a6a60a7b1",
            "arn": "arn:aws:eip:us-east-1:123456789012:eip/eipalloc-0feb6b07af46a4b8f",
            "association_id": "84d4856005e5b2",
            "domain": "vpc",
            "id": "eipalloc-0feb6b07af46a4b8f",
            "ipam_pool_id": "16d6bf94000af1",
            "region": "us-east-1",
            "tags": {
              "Name": "platform-nat-us-east-1a"
            },
            "tags_all": {
              "Name": "platform-nat-us-east-1a"
            }
          },
          "index_key": 0
        },
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "4c71299b00f129",
            "arn": "arn:aws:eip:us-east-1:123456789012:eip/eipalloc-07f3d1ad5835d56ca",
            "association_id": "be060f249ebdf0",
            "domain": "vpc",
            "id": "eipalloc-07f3d1ad5835d56ca",
            "ipam_pool_id": "7d7892463419bb",
            "region": "us-east-1",
            "tags": {
              "Name": "platform-nat-us-east-1b"
            },
            "tags_all": {
              "Name": "platform-nat-us-east-1b"
            }
          },
          "index_key": 1
        }
      ],
      "each": "list"
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c101f26f147fa7fd",
            "arn": "arn:aws:instance:us-east-1:123456789012:instance/i-0be5f5f86459e8b1f",
            "associate_public_ip_address": false,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enable_primary_ipv6": false,
            "force_destroy": false,
            "get_password_data": false,
            "host_id": "6e63dc7b72abcc",
            "host_resource_group_arn": "arn:aws:instance:us-east-1:123456789012:dac22b8e6593",
            "id": "i-0be5f5f86459e8b1f",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "25b1b3a640544a",
            "monitoring": false,
            "outpost_arn": "arn:aws:instance:us-east-1:123456789012:69dee60a4446",
            "placement_group_id": "e53ca722e44b5b",
            "placement_partition_number": 0,
            "primary_network_interface_id": "2c94bbe7a20429",
            "region": "us-east-1",
            "source_dest_check": true,
            "spot_instance_request_id": "cfc5d6e4b8c251",
            "subnet_id": "subnet-0aee85bfb197b5c1a",
            "tags": {
              "Name": "platform-api"
            },
            "tags_all": {
              "Name": "platform-api"
            },
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f4e14e106d7ef990"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c101f26f147fa7fd",
            "arn": "arn:aws:instance:us-east-1:123456789012:instance/i-0249bf2d3e7bbdadb",
            "associate_public_ip_address": false,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enable_primary_ipv6": false,
            "force_destroy": false,
            "get_password_data": false,
            "host_id": "c5f7196f301afe",
            "host_resource_group_arn": "arn:aws:instance:us-east-1:123456789012:3c6dc883d3a0",
            "id": "i-0249bf2d3e7bbdadb",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "53d642d8e3e143",
            "monitoring": false,
            "outpost_arn": "arn:aws:instance:us-east-1:123456789012:f5d5f2d46dcf",
            "placement_group_id": "c31dac0e618872",
            "placement_partition_number": 0,
            "primary_network_interface_id": "74f388667292a7",
            "region": "us-east-1",
            "source_dest_check": true,
            "spot_instance_request_id": "d796ccd7495ee7",
            "subnet_id": "subnet-0aee85bfb197b5c1a",
            "tags": {
              "Name": "platform-web-us-east-1a"
            },
            "tags_all": {
              "Name": "platform-web-us-east-1a"
            },
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f4e14e106d7ef990"
            ]
          },
          "index_key": 0
        },
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c101f26f147fa7fd",
            "arn": "arn:aws:instance:us-east-1:123456789012:instance/i-033c6384d472b70bd",
            "associate_public_ip_address": false,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enable_primary_ipv6": false,
            "force_destroy": false,
            "get_password_data": false,
            "host_id": "3b561fab884a9a",
            "host_resource_group_arn": "arn:aws:instance:us-east-1:123456789012:e61f891b524f",
            "id": "i-033c6384d472b70bd",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "f1951bf5006c6b",
            "monitoring": false,
            "outpost_arn": "arn:aws:instance:us-east-1:123456789012:f64cbb243418",
            "placement_group_id": "1dae54f7ef987c",
            "placement_partition_number": 0,
            "primary_network_interface_id": "7f0fc2833de987",
            "region": "us-east-1",
            "source_dest_check": true,
            "spot_instance_request_id": "cc93acf7592843",
            "subnet_id": "subnet-086be67fc004d8bd0",
            "tags": {
              "Name": "platform-web-us-east-1b"
            },
            "tags_all": {
              "Name": "platform-web-us-east-1b"
            },
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f4e14e106d7ef990"
            ]
          },
          "index_key": 1
        }
      ],
      "each": "list"
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:internet:us-east-1:123456789012:internet_gateway/igw-079eb152af17cba2d",
            "id": "igw-079eb152af17cba2d",
            "owner_id": "122e2fbe7f4c46",
            "region": "us-east-1",
            "tags": {
              "Name": "platform-igw"
            },
            "tags_all": {
              "Name": "platform-igw"
            },
            "vpc_id": "vpc-0ec67d780682f42d7"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:123456789012:loadbalancer/app/3101b9fb",
            "arn_suffix": "91d3ac417c8b85",
            "client_keep_alive": 3600,
            "desync_mitigation_mode": "defensive",
            "dns_name": "bfab57dfdb7ba8",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:123456789012:loadbalancer/app/3101b9fb",
            "idle_timeout": 60,
            "internal": false,
            "load_balancer_type": "application",
            "name": "platform-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "secondary_ips_auto_assigned_per_subnet": 0,
            "security_groups": [
              "sg-01d5b59135d60c2bc"
            ],
            "subnets": [
              "subnet-066309a24571d0ba7",
              "subnet-0e6c8224c12026f37"
            ],
            "tags": {
              "Name": "platform"
            },
            "tags_all": {
              "Name": "platform"
            },
            "vpc_id": "332df4c4b15b93",
            "xff_header_processing_mode": "append",
            "zone_id": "f778f527dd4b05"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:123456789012:listener/app/881647ef",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 0,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:123456789012:targetgroup/e79246d0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:123456789012:listener/app/881647ef",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:123456789012:loadbalancer/app/3101b9fb",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "0b60efcc4218ae",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "a7017a1606510a",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "07ff295c73eac1",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "e45cd397957b5d",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "5740faa26f2fab",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "da6f7ff01fcfd4",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "6b84d20413f807",
            "routing_http_request_x_amzn_tls_version_header_name": "3530800aef72e8",
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": null,
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": 0,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": null,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:123456789012:targetgroup/78982b9d",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:123456789012:listener-rule/app/b98c0594",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/api/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:123456789012:listener-rule/app/b98c0594",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:123456789012:listener/app/881647ef",
            "priority": 100,
            "region": "us-east-1",
            "tags": null,
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:123456789012:targetgroup/78982b9d",
            "arn_suffix": "83c50eaf1e8da2",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "path": "/api/healthz",
                "port": "traffic-port",
                "protocol": "HTTP",
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:123456789012:targetgroup/78982b9d",
            "lambda_multi_value_headers_enabled": false,
            "name": "platform-api",
            "port": 8080,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "tags": {
              "Name": "platform-api"
            },
            "tags_all": {
              "Name": "platform-api"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0ec67d780682f42d7"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:123456789012:targetgroup/e79246d0",
            "arn_suffix": "68ea4cfdddc16b",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "path": "/healthz",
                "port": "traffic-port",
                "protocol": "HTTP",
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:123456789012:targetgroup/e79246d0",
            "lambda_multi_value_headers_enabled": false,
            "name": "platform-web",
            "port": 8080,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "tags": {
              "Name": "platform-web"
            },
            "tags_all": {
              "Name": "platform-web"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0ec67d780682f42d7"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "port": 8080,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:123456789012:targetgroup/78982b9d",
            "target_id": "i-0be5f5f86459e8b1f",
            "id": "7482da43e7e6465953b2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "port": 8080,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:123456789012:targetgroup/e79246d0",
            "target_id": "i-0249bf2d3e7bbdadb",
            "id": "184029b8729d02e8ac27"
          },
          "index_key": 0
        },
        {
          "schema_version": 0,
          "attributes": {
            "port": 8080,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:123456789012:targetgroup/e79246d0",
            "target_id": "i-033c6384d472b70bd",
            "id": "c2bbe3f0a04ea1e79abe"
          },
          "index_key": 1
        }
      ],
      "each": "list"
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0feb6b07af46a4b8f",
            "association_id": "ffc3ff802aa53c",
            "connectivity_type": "public",
            "id": "nat-0f8441e2df8f17445",
            "network_interface_id": "e99c1f8cdf8126",
            "region": "us-east-1",
            "route_table_id": "16b11f7b4b51ea",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e6c8224c12026f37",
            "tags": {
              "Name": "platform-nat-us-east-1a"
            },
            "tags_all": {
              "Name": "platform-nat-us-east-1a"
            },
            "vpc_id": "3dfe9b94454e66"
          },
          "index_key": 0
        },
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07f3d1ad5835d56ca",
            "association_id": "e55393ccbb6584",
            "connectivity_type": "public",
            "id": "nat-0bfe081c352f20d0d",
            "network_interface_id": "0c514aecd1fca7",
            "region": "us-east-1",
            "route_table_id": "199cd1079a4a33",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-066309a24571d0ba7",
            "tags": {
              "Name": "platform-nat-us-east-1b"
            },
            "tags_all": {
              "Name": "platform-nat-us-east-1b"
            },
            "vpc_id": "f4aeb05a2992e7"
          },
          "index_key": 1
        }
      ],
      "each": "list"
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": null,
            "core_network_arn": null,
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "egress_only_gateway_id": null,
            "gateway_id": null,
            "id": "f1dcff08d2b2314695a5",
            "instance_id": "24b58cf9c249c5",
            "instance_owner_id": "4fe451e0c75d57",
            "local_gateway_id": null,
            "nat_gateway_id": "nat-0f8441e2df8f17445",
            "network_interface_id": "1039a7d1992678",
            "odb_network_arn": null,
            "origin": null,
            "region": "us-east-1",
            "route_table_id": "rtb-03590a81c3f29f8a5",
            "state": null,
            "timeouts": null,
            "transit_gateway_id": null,
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": null
          },
          "sensitive_attributes": [],
          "index_key": 0
        },
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": null,
            "core_network_arn": null,
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "egress_only_gateway_id": null,
            "gateway_id": null,
            "id": "3468d3af73150d788570",
            "instance_id": "259a48eed4192f",
            "instance_owner_id": "a82d748d7d610a",
            "local_gateway_id": null,
            "nat_gateway_id": "nat-0bfe081c352f20d0d",
            "network_interface_id": "687427df2936f7",
            "odb_network_arn": null,
            "origin": null,
            "region": "us-east-1",
            "route_table_id": "rtb-098c56260b451729f",
            "state": null,
            "timeouts": null,
            "transit_gateway_id": null,
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": null
          },
          "sensitive_attributes": [],
          "index_key": 1
        }
      ],
      "each": "list"
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": null,
            "core_network_arn": null,
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "egress_only_gateway_id": null,
            "gateway_id": "igw-079eb152af17cba2d",
            "id": "2ab66952b284914791ee",
            "instance_id": "75617fd545a818",
            "instance_owner_id": "6cc180ab7d8764",
            "local_gateway_id": null,
            "nat_gateway_id": null,
            "network_interface_id": "57d3976ca25db0",
            "odb_network_arn": null,
            "origin": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0a0e1a2f39b272aa4",
            "state": null,
            "timeouts": null,
            "transit_gateway_id": null,
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:route:us-east-1:123456789012:route_table/rtb-03590a81c3f29f8a5",
            "id": "rtb-03590a81c3f29f8a5",
            "owner_id": "e1f9cbc2a4e45e",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "platform-private-us-east-1a"
            },
            "tags_all": {
              "Name": "platform-private-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec67d780682f42d7"
          },
          "sensitive_attributes": [],
          "index_key": 0
        },
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:route:us-east-1:123456789012:route_table/rtb-098c56260b451729f",
            "id": "rtb-098c56260b451729f",
            "owner_id": "dbc85014f1cba3",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "platform-private-us-east-1b"
            },
            "tags_all": {
              "Name": "platform-private-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec67d780682f42d7"
          },
          "sensitive_attributes": [],
          "index_key": 1
        }
      ],
      "each": "list"
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:route:us-east-1:123456789012:route_table/rtb-0a0e1a2f39b272aa4",
            "id": "rtb-0a0e1a2f39b272aa4",
            "owner_id": "8e33af5c5d766c",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "platform-public"
            },
            "tags_all": {
              "Name": "platform-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec67d780682f42d7"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0359000f3a9cf5ec2",
            "region": "us-east-1",
            "route_table_id": "rtb-03590a81c3f29f8a5",
            "subnet_id": "subnet-0aee85bfb197b5c1a"
          },
          "index_key": 0
        },
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036e64454992a0664",
            "region": "us-east-1",
            "route_table_id": "rtb-098c56260b451729f",
            "subnet_id": "subnet-086be67fc004d8bd0"
          },
          "index_key": 1
        }
      ],
      "each": "list"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5db2267b53fe9f6",
            "region": "us-east-1",
            "route_table_id": "rtb-0a0e1a2f39b272aa4",
            "subnet_id": "subnet-0e6c8224c12026f37"
          },
          "index_key": 0
        },
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6a34e1237ff066d",
            "region": "us-east-1",
            "route_table_id": "rtb-0a0e1a2f39b272aa4",
            "subnet_id": "subnet-066309a24571d0ba7"
          },
          "index_key": 1
        }
      ],
      "each": "list"
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:security:us-east-1:123456789012:security_group/sg-01d5b59135d60c2bc",
            "description": "Public ingress to the load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01d5b59135d60c2bc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "platform-alb",
            "name_prefix": null,
            "owner_id": "f36f92524a734a",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "platform-alb"
            },
            "tags_all": {
              "Name": "platform-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec67d780682f42d7"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:security:us-east-1:123456789012:security_group/sg-0f4e14e106d7ef990",
            "description": "Application tier",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f4e14e106d7ef990",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01d5b59135d60c2bc"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "platform-app",
            "name_prefix": null,
            "owner_id": "062b8ff9b3a024",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "platform-app"
            },
            "tags_all": {
              "Name": "platform-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec67d780682f42d7"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:subnet:us-east-1:123456789012:subnet/subnet-0aee85bfb197b5c1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "b26f5f839086f0",
            "cidr_block": "10.20.100.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aee85bfb197b5c1a",
            "ipv6_cidr_block_association_id": "93c788efb389cd",
            "ipv6_native": false,
            "map_public_ip_on_launch": false,
            "owner_id": "74105d7fbcfe40",
            "region": "us-east-1",
            "tags": {
              "Name": "platform-private-us-east-1a"
            },
            "tags_all": {
              "Name": "platform-private-us-east-1a"
            },
            "vpc_id": "vpc-0ec67d780682f42d7"
          },
          "index_key": 0
        },
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:subnet:us-east-1:123456789012:subnet/subnet-086be67fc004d8bd0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "9f0194533ccfac",
            "cidr_block": "10.20.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-086be67fc004d8bd0",
            "ipv6_cidr_block_association_id": "3cacb7c66014e6",
            "ipv6_native": false,
            "map_public_ip_on_launch": false,
            "owner_id": "afb6d53c801dcc",
            "region": "us-east-1",
            "tags": {
              "Name": "platform-private-us-east-1b"
            },
            "tags_all": {
              "Name": "platform-private-us-east-1b"
            },
            "vpc_id": "vpc-0ec67d780682f42d7"
          },
          "index_key": 1
        }
      ],
      "each": "list"
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:subnet:us-east-1:123456789012:subnet/subnet-0e6c8224c12026f37",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "520a041e83ef25",
            "cidr_block": "10.20.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e6c8224c12026f37",
            "ipv6_cidr_block_association_id": "f90a7b0f2db497",
            "ipv6_native": false,
            "map_public_ip_on_launch": true,
            "owner_id": "212fec176b79b8",
            "region": "us-east-1",
            "tags": {
              "Name": "platform-public-us-east-1a"
            },
            "tags_all": {
              "Name": "platform-public-us-east-1a"
            },
            "vpc_id": "vpc-0ec67d780682f42d7"
          },
          "index_key": 0
        },
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:subnet:us-east-1:123456789012:subnet/subnet-066309a24571d0ba7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "5efed3e7c25120",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066309a24571d0ba7",
            "ipv6_cidr_block_association_id": "89e2152d916d7d",
            "ipv6_native": false,
            "map_public_ip_on_launch": true,
            "owner_id": "b17c64b38111d2",
            "region": "us-east-1",
            "tags": {
              "Name": "platform-public-us-east-1b"
            },
            "tags_all": {
              "Name": "platform-public-us-east-1b"
            },
            "vpc_id": "vpc-0ec67d780682f42d7"
          },
          "index_key": 1
        }
      ],
      "each": "list"
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:vpc:us-east-1:123456789012:vpc/vpc-0ec67d780682f42d7",
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "92c68a8bcf3c1f",
            "default_route_table_id": "6c6be1ea504bde",
            "default_security_group_id": "693279e6d1218b",
            "dhcp_options_id": "621b279ae88c86",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ec67d780682f42d7",
            "instance_tenancy": "default",
            "ipv6_association_id": "fd4f5d7d5cf440",
            "main_route_table_id": "0238d43d7d8a39",
            "owner_id": "b2856013a75878",
            "region": "us-east-1",
            "tags": {
              "Name": "platform"
            },
            "tags_all": {
              "Name": "platform"
            }
          }
        }
      ]
    }
  ]
}